# dutch-bike-weather-pipeline

./: .dockerignore  .env.example  AI_ASSIST.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: models.py  pipeline.py  storage.py
tests/: test_models.py
