[project]
name = "dutch-bike-weather-pipeline"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic==2.10.6",
    "psycopg2-binary==2.9.10",
    "azure-storage-blob==12.25.1",
    "requests==2.32.3",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]